fix spacing on network title page

--- a/css/screen.css
+++ b/css/screen.css
@@ -207,7 +207,7 @@ li {
 }
 
 .networkTitle {
-  padding-top: 200px;
+  padding-top: 230px;
   padding-left:20px;
 }
 
